versioned_docs/version-4.0.x/reference/functions/Open-ADTSession.mdx
---
id: Open-ADTSession
title: Open-ADTSession
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Opens a new ADT session.

## SYNTAX

```powershell
Open-ADTSession [-SessionState] <SessionState> [[-DeploymentType] <DeploymentType>]
 [[-DeployMode] <DeployMode>] [-AllowRebootPassThru] [-TerminalServerMode] [-DisableLogging]
 [[-AppVendor] <String>] [[-AppName] <String>] [[-AppVersion] <String>] [[-AppArch] <String>]
 [[-AppLang] <String>] [[-AppRevision] <String>] [[-AppScriptVersion] <Version>] [[-AppScriptDate] <DateTime>]
 [[-AppScriptAuthor] <String>] [[-InstallName] <String>] [[-InstallTitle] <String>]
 [[-DeployAppScriptFriendlyName] <String>] [[-DeployAppScriptVersion] <Version>]
 [[-DeployAppScriptDate] <DateTime>]
 [[-DeployAppScriptParameters] <System.Collections.Generic.Dictionary`2[System.String,System.Object]>]
 [[-AppSuccessExitCodes] <Int32[]>] [[-AppRebootExitCodes] <Int32[]>] [[-ScriptDirectory] <String[]>]
 [[-DirFiles] <String>] [[-DirSupportFiles] <String>] [[-DefaultMsiFile] <String>] [[-DefaultMstFile] <String>]
 [[-DefaultMspFiles] <String[]>] [-DisableDefaultMsiProcessList] [[-LogName] <String>] [[-SessionClass] <Type>]
 [-ForceWimDetection] [-PassThru] [[-UnboundArguments] <System.Collections.Generic.List`1[System.Object]>]
 [<CommonParameters>]
```

## DESCRIPTION

This function initializes and opens a new ADT session with the specified parameters.
It handles the setup of the session environment and processes any callbacks defined for the session.
If the session fails to open, it handles the error and closes the session if necessary.

## EXAMPLES

### EXAMPLE 1

```powershell
Open-ADTSession -SessionState $ExecutionContext.SessionState -DeploymentType "Install" -DeployMode "Interactive"
```

Opens a new ADT session with the specified parameters.

## PARAMETERS

### -SessionState

Caller's SessionState.

```yaml
Type: SessionState
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeploymentType

Specifies the type of deployment: Install, Uninstall, or Repair.

```yaml
Type: DeploymentType
Parameter Sets: (All)
Aliases:
Accepted values: Install, Uninstall, Repair

Required: False
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeployMode

Specifies the deployment mode: Interactive, NonInteractive, or Silent.

```yaml
Type: DeployMode
Parameter Sets: (All)
Aliases:
Accepted values: Interactive, NonInteractive, Silent

Required: False
Position: 3
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AllowRebootPassThru

Allows reboot pass-through.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -TerminalServerMode

Enables Terminal Server mode.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -DisableLogging

Disables logging for the session.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppVendor

Specifies the application vendor.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 4
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppName

Specifies the application name.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 5
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppVersion

Specifies the application version.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 6
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppArch

Specifies the application architecture.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 7
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppLang

Specifies the application language.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 8
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppRevision

Specifies the application revision.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 9
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppScriptVersion

Specifies the application script version.

```yaml
Type: Version
Parameter Sets: (All)
Aliases:

Required: False
Position: 10
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppScriptDate

Specifies the application script date.

```yaml
Type: DateTime
Parameter Sets: (All)
Aliases:

Required: False
Position: 11
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppScriptAuthor

Specifies the application script author.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 12
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InstallName

Specifies the install name.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 13
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InstallTitle

Specifies the install title.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 14
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeployAppScriptFriendlyName

Specifies the friendly name of the deploy application script.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 15
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeployAppScriptVersion

Specifies the version of the deploy application script.

```yaml
Type: Version
Parameter Sets: (All)
Aliases:

Required: False
Position: 16
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeployAppScriptDate

Specifies the date of the deploy application script.

```yaml
Type: DateTime
Parameter Sets: (All)
Aliases:

Required: False
Position: 17
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DeployAppScriptParameters

Specifies the parameters for the deploy application script.

```yaml
Type: System.Collections.Generic.Dictionary`2[System.String,System.Object]
Parameter Sets: (All)
Aliases:

Required: False
Position: 18
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppSuccessExitCodes

Specifies the application exit codes.

```yaml
Type: Int32[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 19
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -AppRebootExitCodes

Specifies the application reboot codes.

```yaml
Type: Int32[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 20
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ScriptDirectory

Specifies the base path for Files and SupportFiles.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 21
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DirFiles

Specifies the override path to Files.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 22
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DirSupportFiles

Specifies the override path to SupportFiles.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 23
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultMsiFile

Specifies the default MSI file.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 24
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultMstFile

Specifies the default MST file.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 25
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DefaultMspFiles

Specifies the default MSP files.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 26
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -DisableDefaultMsiProcessList

Specifies that the zero-config MSI code should not gather process names from the MSI file.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -LogName

Specifies an override for the default-generated log file name.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 27
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SessionClass

Specifies an override for PSADT.Module.DeploymentSession class.
Use this if you're deriving a class inheriting off PSAppDeployToolkit's base.

```yaml
Type: Type
Parameter Sets: (All)
Aliases:

Required: False
Position: 28
Default value: PSADT.Module.DeploymentSession
Accept pipeline input: False
Accept wildcard characters: False
```

### -ForceWimDetection

Specifies that WIM files should be detected and mounted during session initialization, irrespective of whether any App values are provided.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru

Passes the session object through the pipeline.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -UnboundArguments

Captures any additional arguments passed to the function.

```yaml
Type: System.Collections.Generic.List`1[System.Object]
Parameter Sets: (All)
Aliases:

Required: False
Position: 29
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### ADTSession

### This function returns the session object if -PassThru is specified.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Open-ADTSession](./Open-ADTSession.mdx)
